Scoped name changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@ajuro/ajuro-ui",
+  "name": "@profimedica/ajuro-ui",
   "version": "0.1.0",
   "description": "Advanced Controls Library with demo on www.aju.ro",
   "main": "index.js",
