--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@profimedica/ajuro-ui",
   "version": "0.1.0",
   "description": "Advanced Controls Library with demo on www.aju.ro",
-  "main": "index.js",
+  "main": "main.js",
   "engines": {
     "node": ">=4.2.4"
   },
